# standalone-cartographer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: map_with_cartographer_main.cpp
config/cartographer/: my_config.lua
include/: cartographer_mapping.hpp
include/comms/: client.hpp  common.hpp  publisher.hpp  server.hpp  subscriber.hpp
msgs/: CMakeLists.txt  LaserRange.proto  Lidar.proto  Odometry.proto  Path.proto  Pose.proto  Robot.proto  Velocity.proto
src/: cartographer_mapping.cpp
src/comms/: client.cpp  publisher.cpp  server.cpp  subscriber.cpp
